--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "fabric": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "jszip": "^3.10.1",
     "lucide-react": "^0.294.0",
     "pdf-lib": "^1.17.1",
